syntax = "proto3";

package user;
option go_package="./user";

import "google/protobuf/timestamp.proto";

message User {
  string kind = 1;
  string id = 2;
  google.protobuf.Timestamp created = 3;
  string url = 4;
  string selfLink = 5;
  Blogs blogs = 6;
  string displayName = 7;
  string about = 8;
  Locale locale = 9;
}

message Blogs {
  string selfLink = 1;
}

message Locale {
  string language = 1;
  string country = 2;
  string variant = 3;
}

message GetReq {
  string userId = 1;
}

// use UserService will generate filepath like userservice
// isn't best practice for Go naming
// but only modify goctl can change the rule
service UserService {
  rpc Get(GetReq) returns (User);
}